@@ -1335,13 +1335,13 @@ gen_shl_and (dest, left_rtx, mask_rtx, source)
       }
     case 4:
       shift_gen_fun = gen_shifty_op;
-    case 2:
     case 3:
       /* If the topmost bit that matters is set, set the topmost bits
 	 that don't matter.  This way, we might be able to get a shorter
 	 signed constant.  */
       if (mask & ((HOST_WIDE_INT)1 << 31 - total_shift))
 	mask |= (HOST_WIDE_INT)~0 << (31 - total_shift);
+    case 2:
       /* Don't expand fine-grained when combining, because that will
          make the pattern fail.  */
       if (rtx_equal_function_value_matters
@@ -1349,6 +1349,10 @@ gen_shl_and (dest, left_rtx, mask_rtx, source)
 	{
 	  rtx operands[3];
   
+	  /* Cases 3 and 4 should be handled by this split
+	     only while combining  */
+	  if (kind > 2)
+	    abort ();
 	  if (right)
 	    {
 	      emit_insn (gen_lshrsi3 (dest, source, GEN_INT (right)));
